# argus

./: .env.example  .gitignore  BATCH_SCRAPING.md  BROWSER_AUTOMATION.md  CAPTCHA_RESEARCH_2025.md  CHANGELOG.md  CLAUDE.md  COMPLETE_SESSION_SUMMARY.md  Cargo.toml  DOCUMENTATION_INDEX.md  FINAL_SESSION_SUMMARY.md  GITHUB_ISSUES.md  IMPROVEMENTS.md  Makefile  NEXUSQL_INTEGRATION.md  NEXUSQL_UPDATE_v2.6.0.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_ARGUS.md  README.md  README_CLI.md  RL_AGENT_COMPLETE.md  RL_AGENT_STATUS.md  RL_ENHANCEMENTS.md  RL_QUICK_START.md  RL_RESEARCH_2025.md  SESSION_4_PROGRESS.md  SESSION_SUMMARY.md  TODO.md  UV_SETUP.md  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.yml  pyproject.toml  requirements-minimal.txt  requirements.txt  run_local.bat  run_local.ps1  simple_scraper.py  urls.txt
config/: settings.py
configs/examples/: language-learning.yaml
crates/argus-api/: Cargo.toml
crates/argus-api/src/: main.rs
crates/argus-browser/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/argus-browser/examples/: basic_usage.rs  complete_scraper.rs  parallel_scraping.rs
crates/argus-browser/src/: chrome.rs  intelligent.rs  lib.rs  pool.rs  session.rs  stealth.rs
crates/argus-captcha/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  README.md
crates/argus-captcha/examples/: audio_captcha.rs  basic_usage.rs  browser_integration.rs  complete_integration.rs
crates/argus-captcha/src/: audio.rs  common.rs  image_captcha.rs  lib.rs  ocr.rs  puzzle.rs  rl_integration.rs  solver.rs
crates/argus-core/: Cargo.toml
crates/argus-core/src/: error.rs  lib.rs  types.rs
crates/argus-extract/: Cargo.toml
crates/argus-extract/src/: config.rs  engine.rs  lib.rs  result.rs
crates/argus-extract/src/extractors/: keyvalue.rs  list.rs  mod.rs  paired.rs  repeating.rs  sections.rs  table.rs
crates/argus-rl/: Cargo.toml
crates/argus-rl/src/: action.rs  agent.rs  behavior.rs  buffer.rs  callbacks.rs  ensemble.rs  environment.rs  executor.rs  integration.rs  lib.rs  networks.rs  reward.rs  state.rs  trainer.rs
crates/argus-storage/: Cargo.toml
crates/argus-storage/src/: cache.rs  database.rs  lib.rs
data/: page_e6f146d8-cdc3-4490-9557-0dc60ebb1251.json  tofugu-urls.txt
docker/: Dockerfile
docs/: ADVANCED_RESEARCH_PRD_RUST.md  ARCHITECTURE.md  DETAILED_ROADMAP_RUST.md  INTELLIGENT_SCRAPER_PRD.md  LOCAL_SETUP.md  PRD.md  RESEARCH_COMPENDIUM.md  SESSION_SUMMARY.md
examples/: rl_agent_demo.rs  train_rl_agent.rs  train_rl_agent_advanced.rs
migrations/: 001_initial_schema.sql
monitoring/: prometheus.yml
scrapers/: base_scraper.py
scripts/: init_db.sql
src/: main.rs  storage.rs
storage/: cache.py  database.py  embeddings.py  hybrid_search.py  models.py  s3_storage.py
vercel-scraper/: .env.example  .gitignore  README.md  package-lock.json  package.json  update-scraper.js  vercel.json
vercel-scraper/api/: scrape.ts
vercel-scraper/src/: scraper.ts
