[workspace]
members = [
    "crates/argus-core",
    "crates/argus-browser",
    "crates/argus-rl",
    "crates/argus-storage",
    "crates/argus-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nguyenetic"]
license = "MIT"
repository = "https://github.com/Nguyenetic/argus"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Browser automation
chromiumoxide = "0.5"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Parsing
scraper = "0.18"
html5ever = "0.26"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto
sha2 = "0.10"
rand = "0.8"

# Configuration
config = "0.13"
dotenv = "0.15"

# Async traits
async-trait = "0.1"
