[package]
name = "argus"
version = "0.1.0"
edition = "2021"
authors = ["Nguyenetic"]
license = "MIT"

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
# NexusQL - Brain-inspired database backend
nexusql = { path = "../NexusQL" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# HTML parsing
scraper = "0.18"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
