[workspace]
members = [
    "crates/argus-core",
    "crates/argus-browser",
    "crates/argus-storage",
    "crates/argus-api",
    "crates/argus-rl",
    "crates/argus-extract",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nguyenetic"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
config = "0.13"
dotenv = "0.15"

[package]
name = "argus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
# NexusQL - Brain-inspired database backend
nexusql = { path = "../NexusQL" }

# Async runtime
tokio.workspace = true

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# HTML parsing
scraper = "0.18"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Progress indicators
indicatif = "0.17"

# CSV export
csv = "1.3"

# Browser automation
chromiumoxide = "0.5"
futures = "0.3"
rand.workspace = true

# Local crates
argus-browser = { path = "crates/argus-browser" }
argus-storage = { path = "crates/argus-storage" }
argus-rl = { path = "crates/argus-rl", optional = true }
argus-extract = { path = "crates/argus-extract" }

[features]
default = []
rl = ["dep:argus-rl"]

[dev-dependencies]
argus-core = { path = "crates/argus-core" }
