[project]
name = "web-scraper"
version = "1.0.0"
description = "Production-grade web scraper with anti-bot bypass, vector search, and distributed architecture"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["web-scraping", "crawler", "vector-search", "anti-bot", "distributed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies (minimal setup)
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "requests>=2.31.0",
    "httpx>=0.25.2",
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.23",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.2",
    "tenacity>=8.2.3",
    "tqdm>=4.66.1",
]

[project.optional-dependencies]
# Full production stack with PostgreSQL and Redis
full = [
    # Database
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "alembic>=1.12.1",
    # Redis & Caching
    "redis>=5.0.1",
    "hiredis>=2.2.3",
    "aioredis>=2.0.1",
    # Celery & Task Queue
    "celery>=5.3.4",
    "flower>=2.0.1",
    "kombu>=5.3.4",
    # Advanced Scraping
    "crawlee[playwright]>=0.3.0",
    "playwright>=1.40.0",
    "seleniumbase>=4.21.0",
    "scrapling>=0.2.0",
    "aiohttp>=3.9.1",
    # Vector & Embeddings (GPU support)
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    # Knowledge Graph & NLP
    "spacy>=3.7.2",
    "networkx>=3.2.1",
    # Storage (S3/MinIO)
    "boto3>=1.34.0",
    "minio>=7.2.0",
    "pandas>=2.1.4",
    "pyarrow>=14.0.1",
    "fastparquet>=2023.10.1",
    # Monitoring & Logging
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.39.0",
    "structlog>=23.2.0",
    "colorlog>=6.8.0",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # Utilities
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "ujson>=5.9.0",
    "orjson>=3.9.10",
]

# Advanced scraping features
scraping = [
    "crawlee[playwright]>=0.3.0",
    "playwright>=1.40.0",
    "seleniumbase>=4.21.0",
    "scrapling>=0.2.0",
    "aiohttp>=3.9.1",
]

# Vector search with PostgreSQL
vector = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
]

# Distributed processing with Celery
distributed = [
    "redis>=5.0.1",
    "hiredis>=2.2.3",
    "celery>=5.3.4",
    "flower>=2.0.1",
    "kombu>=5.3.4",
]

# Knowledge graph extraction
knowledge = [
    "spacy>=3.7.2",
    "networkx>=3.2.1",
]

# Cloud storage (S3/MinIO)
storage = [
    "boto3>=1.34.0",
    "minio>=7.2.0",
    "pandas>=2.1.4",
    "pyarrow>=14.0.1",
    "fastparquet>=2023.10.1",
]

# Monitoring and observability
monitoring = [
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.39.0",
    "structlog>=23.2.0",
    "colorlog>=6.8.0",
]

# Development tools
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "faker>=20.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
]

# All dependencies (equivalent to old requirements.txt)
all = [
    "web-scraper[full,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/web-scraper"
Documentation = "https://github.com/yourusername/web-scraper/blob/main/README.md"
Repository = "https://github.com/yourusername/web-scraper"
Issues = "https://github.com/yourusername/web-scraper/issues"

[project.scripts]
# Command-line scripts
web-scraper = "simple_scraper:main"
scraper-api = "api.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "faker>=20.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["storage", "scrapers", "parsers", "orchestration", "api", "config", "monitoring"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=. --cov-report=html --cov-report=term"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
