[package]
name = "argus-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "argus-server"
path = "src/main.rs"

[dependencies]
argus-core = { path = "../argus-core" }
argus-browser = { path = "../argus-browser" }
argus-storage = { path = "../argus-storage" }
argus-rl = { path = "../argus-rl" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
config.workspace = true
dotenv.workspace = true
