[package]
name = "argus-browser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
argus-core = { path = "../argus-core" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chromiumoxide.workspace = true
rand.workspace = true
async-trait.workspace = true
reqwest.workspace = true
