[package]
name = "argus-browser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
argus-core = { path = "../argus-core" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
chromiumoxide = "0.5"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
