[package]
name = "argus-core"
version = "0.1.0"
edition = "2021"
authors = ["Nguyenetic"]
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
sha2 = "0.10"
