[package]
name = "argus-extract"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Generic configuration-driven structured data extraction for Argus"

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"

# HTML parsing
scraper = "0.18"

# Regex for patterns and glob matching
regex = "1.10"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
